Upgraded startup script with jvm parameters