@@ -1,2 +1,2 @@
-java -Dnet.sf.odinms.wzpath="dist/wz" -jar dist/maplebr2-0.0.1-SNAPSHOT.jar
+java -XX:+UseConcMarkSweepGC -XX:MaxGCPauseMillis=350 -Dnet.sf.odinms.wzpath="dist/wz" -jar dist/maplebr2-0.0.1-SNAPSHOT.jar
 pause
